# dbtoon

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  NOTES.md  PLAN_INPUT.md  README.md  RESEARCH.md  SPECIFY_INPUT.md  dist-workspace.toml
.claude/commands/: speckit.featcomp.complete.md
.github/workflows/: ci.yml
.specify/extensions/: .registry
.specify/memory/: constitution.md
speckit_inputs/: CONSTITUTION_INPUT.md
speckit_inputs/003/: SPECIFY_INPUT.md
speckit_inputs/008-write-query-detection/: PLAN_INPUT.md  SPECIFY_INPUT.md
speckit_inputs/009-simplify-cli-ui/: SPECIFY_INPUT.md
specs/: STATUS.md
specs/001-multi-db-query/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-multi-db-query/checklists/: requirements.md
specs/001-multi-db-query/contracts/: cli-interface.md  config-schema.toml
specs/002-std-env-vars/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-std-env-vars/checklists/: requirements.md
specs/003-column-type-metadata/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-column-type-metadata/checklists/: requirements.md
specs/003-column-type-metadata/contracts/: output-format.md
specs/004-output-formats/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-output-formats/checklists/: requirements.md
specs/004-output-formats/contracts/: output-format-contract.md
specs/005-truncation-metadata/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-truncation-metadata/checklists/: requirements.md
specs/005-truncation-metadata/contracts/: truncation-metadata-contract.md
specs/006-cargo-dist-release/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-cargo-dist-release/checklists/: requirements.md
specs/006-cargo-dist-release/contracts/: cli-update.md  release-workflow.md
specs/007-tiberius-mssql/: KNOWN-ISSUES.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-write-query-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-simplify-cli-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: cli.rs  config.rs  error.rs  format.rs  format_arrow.rs  format_columnar.rs  format_csv.rs  format_detect.rs  format_parquet.rs  init.rs  lib.rs  main.rs  masking.rs  output.rs  profile.rs  update.rs  validation.rs  verbose.rs
src/backend/: databricks.rs  mod.rs  sqlserver.rs
tests/integration/: mod.rs  sqlserver_integration.rs
tests/unit/: cli_test.rs  config_test.rs  format_arrow_test.rs  format_columnar_test.rs  format_csv_test.rs  format_detect_test.rs  format_parquet_test.rs  format_test.rs  init_test.rs  masking_test.rs  mod.rs  output_test.rs  profile_test.rs  sqlserver_test.rs  validation_test.rs
(+8 files in other folders)
