[package]
name = "dbtoon"
version = "0.1.0"
edition = "2024"

[dependencies]
odbc-api = "20"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlparser = "0.61"
toon-format = { version = "0.4", default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "6"
thiserror = "2"
anyhow = "1"
secrecy = "0.10"
dotenvy = "0.15"

[dev-dependencies]
odbc-api = "20"
secrecy = "0.10"
