[package]
name = "dbtoon"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/jesse-smith/dbtoon"

[dependencies]
odbc-api = "20"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlparser = "0.61"
toon-format = { version = "0.4", default-features = false }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "6"
thiserror = "2"
anyhow = "1"
secrecy = "0.10"
dotenvy = "0.15"
csv = "1.4"
arrow = { version = "57", default-features = false, features = ["ipc"] }
parquet = { version = "57", default-features = false, features = ["arrow"] }
axoupdater = { version = "0.9", default-features = false, features = ["github_releases", "blocking"] }

[dev-dependencies]
odbc-api = "20"
secrecy = "0.10"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
